# fsmwise2025

./: .gitignore  CMakeLists.txt  README.md  action.h  context.cpp  context.h  contextdata.cpp  contextdata.h  main.cpp
calibratingfsm/: AS11.cpp  AS11.h  AS12.cpp  AS12.h  AS21.cpp  AS21.h  AS22.cpp  AS22.h  AS31.cpp  AS31.h  AS32.cpp  AS32.h  AS41.cpp  AS41.h  AS42.cpp  AS42.h  AS51.cpp  AS51.h  AS52.cpp  AS52.h  AS61.cpp  AS61.h  AS62.cpp  AS62.h  AS71.cpp  AS71.h  AS72.cpp  AS72.h  AS81.cpp  AS81.h  AS82.cpp  AS82.h  AS91.cpp  AS91.h  AS92.cpp  AS92.h  Fertig1.cpp  Fertig1.h  Fertig2.cpp  Fertig2.h  (+8 more)
estopfsm/: basestateestop.cpp  basestateestop.h  bothpressed.cpp  bothpressed.h  bothpressedcl.cpp  bothpressedcl.h  connectionlost.cpp  connectionlost.h  e1pressed.cpp  e1pressed.h  e1pressedcl.cpp  e1pressedcl.h  e2pressed.cpp  e2pressed.h  e2pressedcl.cpp  e2pressedcl.h  pseudoendestop.h  resetFSM.cpp  resetFSM.h
fsm/: basestate.cpp  basestate.h  estopFSM.cpp  estopFSM.h  mainFSM.cpp  mainFSM.h  pseudostartstate.cpp  pseudostartstate.h
mainfsm/: basestatemain.cpp  basestatemain.h  calibrating.cpp  calibrating.h  idle.cpp  idle.h  operating.cpp  operating.h  pseudostartmain.h
misc/: action.cpp  action.h  context.cpp  context.h  contextdata.cpp  contextdata.h  logic.cpp  logic.h  triggerprocessingstate.h
operatingfsm1/: err_lost_ws.cpp  err_lost_ws.h  err_slide_full.cpp  err_slide_full.h  error.cpp  error.h  fb1.cpp  fb1.h  operatingbasestate1.cpp  operatingbasestate1.h  pseudostartoperating1.h  warn_sort_not_possible.cpp  warn_sort_not_possible.h
operatingfsm1/errorfsm/: errorbasestate.cpp  errorbasestate.h  handlingerror.cpp  handlingerror.h  waiterror.cpp  waiterror.h
operatingfsm1/fb1runfsm/: fb1runbasestate.cpp  fb1runbasestate.h  fb1runidle.cpp  fb1runidle.h  fb1running.cpp  fb1running.h  fb1runwait.cpp  fb1runwait.h  running.cpp  running.h
operatingfsm1/fb1sortfsm/: fb1sortbasestate.cpp  fb1sortbasestate.h  fb1sortok.cpp  fb1sortok.h  fb1sortout.cpp  fb1sortout.h  fb1warning.cpp  fb1warning.h  pseudostartfb1sort.h
operatingfsm1/runningfsm/: fast.cpp  fast.h  runningbasestate.cpp  runningbasestate.h  runningpseudostart.h  slow.cpp  slow.h
operatingfsm1/slowfsm/: basestateslow1.cpp  basestateslow1.h  bore1.h  flat1.cpp  flat1.h  high1.cpp  high1.h  idleslow1.cpp  idleslow1.h  pseudoendslow1.h  ws_bin1.cpp  ws_bin1.h  ws_bore1.cpp  ws_bore1.h  ws_flat1.cpp  ws_flat1.h  ws_high1.cpp  ws_high1.h
operatingfsm2/: err_lost_ws2.h  err_new_ws.cpp  err_new_ws.h  err_new_ws2.cpp  err_new_ws2.h  err_slide_full.h  err_slide_full2.cpp  err_slide_full2.h  error.cpp  error.h  error2.cpp  error2.h  fb1.cpp  fb2.cpp  fb2.h  operatingbasestate2.cpp  operatingbasestate2.h  pseudostartoperating2.h  warn_sort_not_possible.cpp  warn_sort_not_possible.h
operatingfsm2/errorfsm/: errorbasestate.cpp  errorbasestate2.cpp  errorbasestate2.h  handlingerror.cpp  handlingerror.h  handlingerror2.cpp  handlingerror2.h  pseudoenderror.h  pseudoenderror2.h  pseudostarterror.h  pseudostarterror2.h  waiterror.cpp  waiterror2.cpp  waiterror2.h
operatingfsm2/fb1runfsm/: fb1runbasestate.cpp  fb1runbasestate.h  fb1runidle.cpp  fb1running.cpp  fb1running.h  fb1runwait.cpp  fb1runwait.h  fb2runbasestate.cpp  fb2runbasestate.h  fb2runidle.cpp  fb2runidle.h  fb2running.cpp  fb2running.h  fb2runwait.cpp  fb2runwait.h  pseudostartfb1run.h  pseudostartfb2run.h
operatingfsm2/fb1sortfsm/: fb1sortbasestate.cpp  fb1sortbasestate.h  fb1sortok.h  fb1sortout.cpp  fb1warning.cpp  fb2sortbasestate.cpp  fb2sortbasestate.h  fb2sortok.cpp  fb2sortok.h  fb2sortout.cpp  fb2sortout.h  fb2warning.cpp  fb2warning.h  pseudostartfb2sort.h
operatingfsm2/runningfsm/: fast.cpp  fast2.cpp  fast2.h  runningbasestate.cpp  runningbasestate.h  runningbasestate2.cpp  runningbasestate2.h  runningpseudostart2.h  slow.cpp  slow2.cpp  slow2.h
operatingfsm2/slowfsm/: basestateslow1.h  basestateslow2.cpp  basestateslow2.h  bore1.cpp  bore2.cpp  bore2.h  flat1.cpp  flat2.cpp  flat2.h  high2.cpp  high2.h  idleslow1.h  idleslow2.cpp  idleslow2.h  pseudoendslow2.h  pseudostartslow1.h  pseudostartslow2.h  ws_bin1.cpp  ws_bin2.cpp  ws_bin2.h  ws_bore1.cpp  ws_bore2.cpp  ws_bore2.h  ws_flat2.cpp  ws_flat2.h  ws_high2.cpp  ws_high2.h
resetfsm/: basestatereset.cpp  basestatereset.h  pseudoendreset.h  pseudostartreset.h  r1pressed.cpp  r1pressed.h  r2pressed.cpp  r2pressed.h  wait.cpp  wait.h
