cmake_minimum_required(VERSION 3.29)
project(fsm_estop)

set(CMAKE_CXX_STANDARD 20)

add_executable(fsm_estop main.cpp
        misc/action.cpp
        misc/action.h
        misc/context.cpp
        misc/context.h
        fsm/basestate.cpp
        fsm/basestate.h
        misc/contextdata.cpp
        misc/contextdata.h
        misc/triggerprocessingstate.h
        fsm/pseudostartstate.cpp
        fsm/pseudostartstate.h
        mainfsm/basestatemain.cpp
        mainfsm/basestatemain.h
        estopfsm/basestateestop.cpp
        estopfsm/basestateestop.h
        fsm/mainFSM.cpp
        fsm/mainFSM.h
        fsm/estopFSM.cpp
        fsm/estopFSM.h
        resetfsm/basestatereset.cpp
        resetfsm/basestatereset.h
        resetfsm/pseudostartreset.h
        mainfsm/pseudostartmain.h
        estopfsm/e1pressed.cpp
        estopfsm/e1pressed.h
        estopfsm/e2pressed.cpp
        estopfsm/e2pressed.h
        estopfsm/bothpressed.cpp
        estopfsm/bothpressed.h
        estopfsm/resetFSM.cpp
        estopfsm/resetFSM.h
        estopfsm/pseudoendestop.h
        resetfsm/wait.cpp
        resetfsm/wait.h
        resetfsm/r1pressed.cpp
        resetfsm/r1pressed.h
        resetfsm/r2pressed.cpp
        resetfsm/r2pressed.h
        resetfsm/pseudoendreset.h
        mainfsm/idle.cpp
        mainfsm/idle.h
        mainfsm/Operating.cpp
        mainfsm/Operating.h
        mainfsm/calibrating.cpp
        mainfsm/calibrating.h
        operatingfsm1/operatingbasestate1.cpp
        operatingfsm1/operatingbasestate1.h
        calibratingfsm/calibratingbasestate.cpp
        calibratingfsm/calibratingbasestate.h
        operatingfsm2/operatingbasestate2.cpp
        operatingfsm1/pseudostartoperating1.h
        operatingfsm2/pseudostartoperating2.h
        operatingfsm1/fb1runfsm/fb1runbasestate.cpp
        operatingfsm1/fb1runfsm/fb1runbasestate.h
        operatingfsm1/fb1sortfsm/fb1sortbasestate.cpp
        operatingfsm1/fb1sortfsm/fb1sortbasestate.h
        operatingfsm1/fb1runfsm/pseudostartfb1run.h
        operatingfsm1/fb1sortfsm/pseudostartfb1sort.h
        operatingfsm1/fb1.cpp
        operatingfsm1/fb1.h
        operatingfsm1/warn_sort_not_possible.cpp
        operatingfsm1/warn_sort_not_possible.h
        operatingfsm1/err_new_ws.cpp
        operatingfsm1/err_new_ws.h
        operatingfsm1/Err_lost_ws.cpp
        operatingfsm1/Err_lost_ws.h
        operatingfsm1/Err_slide_full.cpp
        operatingfsm1/Err_slide_full.h
        operatingfsm1/fb1runfsm/fb1runidle.cpp
        operatingfsm1/fb1runfsm/fb1runidle.h
        operatingfsm1/fb1runfsm/fb1runwait.cpp
        operatingfsm1/fb1runfsm/fb1runwait.h
        operatingfsm1/fb1runfsm/fb1running.cpp
        operatingfsm1/fb1runfsm/fb1running.h
        operatingfsm1/runningfsm/runningbasestate.cpp
        operatingfsm1/runningfsm/runningbasestate.h
        operatingfsm1/runningfsm/runningpseudostart.h
        operatingfsm1/runningfsm/fast.cpp
        operatingfsm1/runningfsm/fast.h
        operatingfsm1/runningfsm/slow.cpp
        operatingfsm1/runningfsm/slow.h
        operatingfsm1/fb1sortfsm/fb1sortok.cpp
        operatingfsm1/fb1sortfsm/fb1sortok.h
        operatingfsm1/fb1sortfsm/fb1sortout.cpp
        operatingfsm1/fb1sortfsm/fb1sortout.h
        estopfsm/e1pressedcl.cpp
        estopfsm/e1pressedcl.h
        estopfsm/connectionlost.cpp
        estopfsm/connectionlost.h
        estopfsm/bothpressedcl.cpp
        estopfsm/bothpressedcl.h
        operatingfsm1/fb1sortfsm/fb1warning.cpp
        operatingfsm1/fb1sortfsm/fb1warning.h
)
