cmake_minimum_required(VERSION 3.29)
project(fsm_estop)

set(CMAKE_CXX_STANDARD 20)

add_executable(fsm_estop main.cpp
        misc/action.cpp
        misc/action.h
        misc/context.cpp
        misc/context.h
        fsm/basestate.cpp
        fsm/basestate.h
        misc/contextdata.cpp
        misc/contextdata.h
        misc/triggerprocessingstate.h
        fsm/pseudostartstate.cpp
        fsm/pseudostartstate.h
        mainfsm/basestatemain.cpp
        mainfsm/basestatemain.h
        estopfsm/basestateestop.cpp
        estopfsm/basestateestop.h
        fsm/mainFSM.cpp
        fsm/mainFSM.h
        fsm/estopFSM.cpp
        fsm/estopFSM.h
        resetfsm/basestatereset.cpp
        resetfsm/basestatereset.h
        resetfsm/pseudostartreset.h
        mainfsm/pseudostartmain.h
        estopfsm/e1pressed.cpp
        estopfsm/e1pressed.h
        estopfsm/e2pressed.cpp
        estopfsm/e2pressed.h
        estopfsm/bothpressed.cpp
        estopfsm/bothpressed.h
        estopfsm/resetFSM.cpp
        estopfsm/resetFSM.h
        estopfsm/pseudoendestop.h
        resetfsm/wait.cpp
        resetfsm/wait.h
        resetfsm/r1pressed.cpp
        resetfsm/r1pressed.h
        resetfsm/r2pressed.cpp
        resetfsm/r2pressed.h
        resetfsm/pseudoendreset.h
        mainfsm/idle.cpp
        mainfsm/idle.h
        mainfsm/Operating.cpp
        mainfsm/Operating.h
        mainfsm/calibrating.cpp
        mainfsm/calibrating.h
        operatingfsm1/operatingbasestate1.cpp
        operatingfsm1/operatingbasestate1.h
        calibratingfsm/calibratingbasestate.cpp
        calibratingfsm/calibratingbasestate.h
        operatingfsm2/operatingbasestate2.cpp
        operatingfsm1/pseudostartoperating1.h
        operatingfsm2/pseudostartoperating2.h
        operatingfsm1/fb1runfsm/fb1runbasestate.cpp
        operatingfsm1/fb1runfsm/fb1runbasestate.h
        operatingfsm1/fb1sortfsm/fb1sortbasestate.cpp
        operatingfsm1/fb1sortfsm/fb1sortbasestate.h
        operatingfsm1/fb1runfsm/pseudostartfb1run.h
        operatingfsm1/fb1sortfsm/pseudostartfb1sort.h
        operatingfsm1/fb1.cpp
        operatingfsm1/fb1.h
        operatingfsm1/fb1runfsm/fb1runidle.cpp
        operatingfsm1/fb1runfsm/fb1runidle.h
        operatingfsm1/fb1runfsm/fb1runwait.cpp
        operatingfsm1/fb1runfsm/fb1runwait.h
        operatingfsm1/fb1runfsm/fb1running.cpp
        operatingfsm1/fb1runfsm/fb1running.h
        operatingfsm1/runningfsm/runningbasestate.cpp
        operatingfsm1/runningfsm/runningbasestate.h
        operatingfsm1/runningfsm/runningpseudostart.h
        operatingfsm1/runningfsm/fast.cpp
        operatingfsm1/runningfsm/fast.h
        operatingfsm1/runningfsm/slow.cpp
        operatingfsm1/runningfsm/slow.h
        operatingfsm1/fb1sortfsm/fb1sortok.cpp
        operatingfsm1/fb1sortfsm/fb1sortok.h
        operatingfsm1/fb1sortfsm/fb1sortout.cpp
        operatingfsm1/fb1sortfsm/fb1sortout.h
        estopfsm/e1pressedcl.cpp
        estopfsm/e1pressedcl.h
        estopfsm/connectionlost.cpp
        estopfsm/connectionlost.h
        estopfsm/bothpressedcl.cpp
        estopfsm/bothpressedcl.h
        operatingfsm1/fb1sortfsm/fb1warning.cpp
        operatingfsm1/fb1sortfsm/fb1warning.h
        operatingfsm1/slowfsm/basestateslow1.cpp
        operatingfsm1/slowfsm/basestateslow1.h
        operatingfsm1/slowfsm/pseudostartslow1.h
        operatingfsm1/slowfsm/idleslow1.cpp
        operatingfsm1/slowfsm/idleslow1.h
        operatingfsm1/slowfsm/ws_flat1.cpp
        operatingfsm1/slowfsm/ws_flat1.h
        operatingfsm1/slowfsm/ws_high1.cpp
        operatingfsm1/slowfsm/ws_high1.h
        operatingfsm1/slowfsm/bore1.cpp
        operatingfsm1/slowfsm/bore1.h
        operatingfsm1/slowfsm/ws_bore1.cpp
        operatingfsm1/slowfsm/ws_bore1.h
        operatingfsm1/slowfsm/ws_bin1.cpp
        operatingfsm1/slowfsm/ws_bin1.h
        operatingfsm1/slowfsm/high1.cpp
        operatingfsm1/slowfsm/high1.h
        operatingfsm1/slowfsm/pseudoendslow1.h
        operatingfsm1/slowfsm/flat1.cpp
        operatingfsm1/slowfsm/flat1.h
        operatingfsm1/errorfsm/errorbasestate.cpp
        operatingfsm1/errorfsm/errorbasestate.h
        operatingfsm1/errorfsm/pseudostarterror.h
        operatingfsm1/errorfsm/pseudoenderror.h
        operatingfsm1/errorfsm/waiterror.cpp
        operatingfsm1/errorfsm/handlingerror.cpp
        operatingfsm1/errorfsm/handlingerror.h
        operatingfsm1/errorfsm/waiterror.h
        operatingfsm1/error.cpp
        operatingfsm1/error.h
        operatingfsm2/fb2.h
        operatingfsm2/error2.h
        operatingfsm2/pseudostartoperating2.h
        operatingfsm2/operatingbasestate2.cpp
        operatingfsm2/operatingbasestate2.h
        operatingfsm2/error2.cpp
        operatingfsm2/fb2.cpp
        operatingfsm2/fb1runfsm/fb2runidle.h
        operatingfsm2/fb1runfsm/fb2runwait.h
        operatingfsm2/fb1runfsm/fb2runidle.cpp
        operatingfsm2/fb1runfsm/fb2runbasestate.cpp
        operatingfsm2/fb1runfsm/pseudostartfb2run.h
        operatingfsm2/fb1runfsm/fb2runbasestate.h
        operatingfsm2/fb1runfsm/fb2runwait.cpp
        operatingfsm2/fb1runfsm/fb2running.cpp
        operatingfsm2/fb1runfsm/fb2running.h
        operatingfsm2/errorfsm/pseudoenderror2.h
        operatingfsm2/errorfsm/pseudostarterror2.h
        operatingfsm2/errorfsm/errorbasestate2.cpp
        operatingfsm2/errorfsm/waiterror2.h
        operatingfsm2/errorfsm/handlingerror2.h
        operatingfsm2/errorfsm/waiterror2.cpp
        operatingfsm2/errorfsm/handlingerror2.cpp
        operatingfsm2/errorfsm/errorbasestate2.h
        operatingfsm2/slowfsm/high2.h
        operatingfsm2/slowfsm/bore2.h
        operatingfsm2/slowfsm/idleslow2.cpp
        operatingfsm2/slowfsm/ws_bore2.cpp
        operatingfsm2/slowfsm/idleslow2.h
        operatingfsm2/slowfsm/flat2.cpp
        operatingfsm2/slowfsm/basestateslow2.h
        operatingfsm2/slowfsm/bore2.cpp
        operatingfsm2/slowfsm/flat2.h
        operatingfsm2/slowfsm/ws_flat2.cpp
        operatingfsm2/slowfsm/ws_high2.h
        operatingfsm2/slowfsm/ws_bin2.h
        operatingfsm2/slowfsm/ws_high2.cpp
        operatingfsm2/slowfsm/basestateslow2.cpp
        operatingfsm2/slowfsm/ws_bore2.h
        operatingfsm2/slowfsm/ws_bin2.cpp
        operatingfsm2/slowfsm/high2.cpp
        operatingfsm2/slowfsm/pseudoendslow2.h
        operatingfsm2/slowfsm/pseudostartslow2.h
        operatingfsm2/slowfsm/ws_flat2.h
        operatingfsm2/fb1sortfsm/fb2sortbasestate.h
        operatingfsm2/fb1sortfsm/fb2sortbasestate.cpp
        operatingfsm2/fb1sortfsm/fb2warning.h
        operatingfsm2/fb1sortfsm/fb2sortok.cpp
        operatingfsm2/fb1sortfsm/fb2warning.cpp
        operatingfsm2/fb1sortfsm/fb2sortout.h
        operatingfsm2/fb1sortfsm/fb2sortok.h
        operatingfsm2/fb1sortfsm/pseudostartfb2sort.h
        operatingfsm2/fb1sortfsm/fb2sortout.cpp
        operatingfsm2/runningfsm/runningpseudostart2.h
        operatingfsm2/runningfsm/runningbasestate2.h
        operatingfsm2/runningfsm/slow2.cpp
        operatingfsm2/runningfsm/fast2.cpp
        operatingfsm2/runningfsm/fast2.h
        operatingfsm2/runningfsm/slow2.h
        operatingfsm2/runningfsm/runningbasestate2.cpp
        calibratingfsm/calibratingpseudostart.h
        calibratingfsm/Idle1.cpp
        calibratingfsm/Idle1.h
        calibratingfsm/AS11.cpp
        calibratingfsm/AS11.h
        calibratingfsm/AS31.cpp
        calibratingfsm/AS31.h
        calibratingfsm/AS41.h
        calibratingfsm/AS41.cpp
        calibratingfsm/AS51.cpp
        calibratingfsm/AS51.h
        calibratingfsm/AS61.cpp
        calibratingfsm/AS61.h
        calibratingfsm/AS71.cpp
        calibratingfsm/AS71.h
        calibratingfsm/AS81.cpp
        calibratingfsm/AS81.h
        calibratingfsm/AS91.cpp
        calibratingfsm/AS91.h
        calibratingfsm/Fertig1.cpp
        calibratingfsm/Fertig1.h
        calibratingfsm/AS21.cpp
        calibratingfsm/AS21.h
        calibratingfsm/Fertig2.cpp
        calibratingfsm/calibratingpseudoend.h
        calibratingfsm/AS92.h
        calibratingfsm/AS92.cpp
        calibratingfsm/AS82.h
        calibratingfsm/AS22.cpp
        calibratingfsm/AS32.cpp
        calibratingfsm/AS32.h
        calibratingfsm/AS42.cpp
        calibratingfsm/AS42.h
        calibratingfsm/AS52.cpp
        calibratingfsm/AS52.h
        calibratingfsm/AS62.cpp
        calibratingfsm/AS62.h
        calibratingfsm/AS72.cpp
        calibratingfsm/AS72.h
        calibratingfsm/AS82.cpp
        calibratingfsm/Idle2.cpp
        calibratingfsm/Idle2.h
        estopfsm/e2pressedcl.cpp
)
